<resources>
    <string name="app_name">MyTravelApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="sign_in">SIGN IN</string>
    <string name="please_add_your_email_address">Please add your email address!</string>
    <string name="please_add_your_password">Please add your password!</string>
    <string name="sign_up">SIGN UP</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="first_time_here">First time here?</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="please_add_your_username">Please add your username!</string>
    <string name="please_re_type_your_password">Please re-type your password!</string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="please_type_your_old_password">Please type your old password!</string>
    <string name="please_type_your_new_password">Please type your new password!</string>
    <string name="please_re_type_your_new_password">Please re-type your new password!</string>
    <string name="reset_password">Reset password!</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="edit_trip">EDIT TRIP</string>
    <string name="trip_name">Trip Name</string>
    <string name="destination">Destination</string>
    <string name="price_in_eur">Price in EUR</string>
    <string name="please_select_an_image">Please select an image!</string>
    <string name="save">SAVE</string>
    <string name="arriving_date_">Arriving date</string>
    <string name="leaving_date">Leaving date</string>
    <string name="degrees">Degrees:</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="yourtrips">Your trips</string>
    <string name="about_us">About us</string>
    <string name="contact">Contact</string>
    <string name="share">Share</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>