<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DisplayDetailsActivity"
    android:background="@drawable/gradient1">

    <TextView
        android:id="@+id/textViewDetails"
        android:layout_width="251dp"
        android:layout_height="99dp"
        android:gravity="center"
        android:text="DETAILS"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.064" />

    <TextView
        android:id="@+id/tripNameDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="44dp"
        android:background="#30ffffff"
        android:drawableStart="@drawable/ic_baseline_drive_file_rename_outline_24"
        android:text="@string/trip_name"
        android:textColor="@color/white"
        android:padding="15dp"
        android:textAlignment="center"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDetails"
        app:layout_constraintVertical_bias="0.087" />

    <TextView
        android:id="@+id/destinationDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="40dp"
        android:background="#30ffffff"
        android:drawableStart="@drawable/ic_baseline_where_to_vote_24"
        android:text="@string/destination"
        android:textColor="@color/white"
        android:padding="15dp"
        android:textAlignment="center"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tripNameDetails"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/arrivingDateDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="72dp"
        android:background="#30ffffff"
        android:clickable="false"
        android:cursorVisible="false"
        android:drawableStart="@drawable/baseline_flight_land_24"
        android:drawablePadding="20dp"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:text="@string/arriving_date_"
        android:textColor="@color/white"
        android:padding="15dp"
        android:textAlignment="center"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/destinationDetails" />

    <TextView
        android:id="@+id/leavingDateDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="72dp"
        android:background="#30ffffff"
        android:clickable="false"
        android:cursorVisible="false"
        android:drawableStart="@drawable/baseline_flight_takeoff_24"
        android:drawablePadding="20dp"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:text="@string/leaving_date"
        android:textColor="@color/white"
        android:padding="15dp"
        android:textAlignment="center"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/arrivingDateDetails" />

    <TextView
        android:id="@+id/weatherDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="72dp"
        android:background="#30ffffff"
        android:clickable="false"
        android:cursorVisible="false"
        android:drawableStart="@drawable/baseline_wb_sunny_24"
        android:drawablePadding="20dp"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/degrees"
        android:padding="15dp"
        android:textAlignment="center"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/leavingDateDetails" />

    <TextView
        android:id="@+id/latitudeDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="72dp"
        android:background="#30ffffff"
        android:clickable="false"
        android:cursorVisible="false"
        android:drawableStart="@drawable/ic_baseline_info_24"
        android:drawablePadding="20dp"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/latitude"
        android:padding="15dp"
        android:textAlignment="center"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weatherDetails" />

    <TextView
        android:id="@+id/longitudeDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="72dp"
        android:background="#30ffffff"
        android:clickable="false"
        android:cursorVisible="false"
        android:drawableStart="@drawable/baseline_water_drop_24"
        android:drawablePadding="20dp"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/longitude"
        android:padding="15dp"
        android:textAlignment="center"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/latitudeDetails" />







</androidx.constraintlayout.widget.ConstraintLayout>